@@ -1,0 +1,3 @@
+killall.sh bin
+netcfg bin
+base-installer.d usr/lib
