@@ -13,6 +13,7 @@ netcfg (1.52) UNRELEASED; urgency=low
   * On Linux, feed the output of 'ip addr show' into /dev/random after the
     network is up to improve entropy. Idea picked up from Theodore Y. Ts'o,
     http://lkml.org/lkml/2007/12/8/108.
+  * Upgrade to debhelper v7.
 
  -- Luca Favatella <slackydeb@gmail.com>  Thu, 23 Jul 2009 00:44:44 +0200
 
